--- a/checkpoint3.yaml
+++ b/checkpoint3.yaml
@@ -10,6 +10,10 @@ Parameters:
     Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
     Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
 
+  Avain:
+    Description: EC2-avainpari SSH-yhteyttä varten
+    Type: 'AWS::EC2::KeyPair::KeyName'
+
 Resources:
 
   SecurityGrouppi:
@@ -35,12 +39,14 @@ Resources:
     Properties:
       ImageId: !Ref UusinAmi
       InstanceType: t2.nano
-      KeyName: mitjanavain-tokyo
+      KeyName: !Ref Avain
       SecurityGroupIds:
         - !Ref SecurityGrouppi
       Tags:
         - Key: Owner
           Value: Mitja
+        - Key: Name
+          Value: mitja-checkpoint3
       UserData:
           Fn::Base64:
             Fn::Join:
